--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,9 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;}
+	vertical-align: baseline;
+	font-family: "Open Sans", Helvetica, Microsoft JhengHei;
+}
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
@@ -103,8 +105,8 @@ input, select, textarea {
 
 	body, input, select, textarea {
 		color: #fff;
-		font-family: "Open Sans", Helvetica, sans-serif;
-		font-size: 15pt;
+		font-family: "Open Sans", Helvetica, Microsoft JhengHei;
+		font-size: 18pt;
 		font-weight: 400;
 		letter-spacing: 0.075em;
 		line-height: 1.65em;
@@ -113,7 +115,7 @@ input, select, textarea {
 		@media screen and (max-width: 1680px) {
 
 			body, input, select, textarea {
-				font-size: 13pt;
+				font-size: 17pt;
 			}
 
 		}
@@ -121,7 +123,7 @@ input, select, textarea {
 		@media screen and (max-width: 1280px) {
 
 			body, input, select, textarea {
-				font-size: 12pt;
+				font-size: 16pt;
 			}
 
 		}
@@ -129,7 +131,7 @@ input, select, textarea {
 		@media screen and (max-width: 736px) {
 
 			body, input, select, textarea {
-				font-size: 11pt;
+				font-size: 15pt;
 				letter-spacing: 0.0375em;
 			}
 
@@ -160,6 +162,8 @@ input, select, textarea {
 
 	p {
 		margin: 0 0 2em 0;
+		font-weight: 400;
+		line-height: 130%;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1854,14 +1858,6 @@ input, select, textarea {
 			box-shadow: none;
 		}
 
-		input[type="text"]:focus,
-		input[type="password"]:focus,
-		input[type="email"]:focus,
-		select:focus,
-		textarea:focus {
-			box-shadow: 0 0 0 2px #21b2a6;
-		}
-
 	select {
 		background-size: 1.25em;
 		background-repeat: no-repeat;
@@ -1951,7 +1947,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			box-shadow: 0 0 0 2px #21b2a6;
+			box-shadow: 0 0 0 2px #4D9167;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2056,15 +2052,15 @@ input, select, textarea {
 			}
 
 		.icon.style1 {
-			color: #00ffcc;
+			color: #B2E54D;
 		}
 
 		.icon.style2 {
-			color: #00f0ff;
+			color: #F05E46;
 		}
 
 		.icon.style3 {
-			color: #76ddff;
+			color: #FBAB2D;
 		}
 
 /* Image */
@@ -2465,7 +2461,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ed4933;
+			background-color: #f05e46;
 			box-shadow: none !important;
 			color: #ffffff !important;
 		}
@@ -2475,7 +2471,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ef5e4a !important;
+				background-color: #f2735e !important;
 			}
 
 			input[type="submit"].primary:active,
@@ -2483,7 +2479,7 @@ input, select, textarea {
 			input[type="button"].primary:active,
 			button.primary:active,
 			.button.primary:active {
-				background-color: #eb341c !important;
+				background-color: #f48775 !important;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -2497,6 +2493,7 @@ input, select, textarea {
 		.button:disabled {
 			pointer-events: none;
 			opacity: 0.25;
+			box-shadow: none !important;
 		}
 
 		@media screen and (max-width: 736px) {
@@ -2582,7 +2579,7 @@ input, select, textarea {
 
 			.features li:before {
 				display: block;
-				color: #00ffcc;
+				color: #B2E54D;
 				position: absolute;
 				left: 1.75em;
 				top: 2.75em;
@@ -2795,8 +2792,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
-			color: #c8ece9;
+			background-color: #1d242a;
+			color: #ffffff;
 		}
 
 			.wrapper.style1 strong, .wrapper.style1 b {
@@ -2824,11 +2821,11 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(255, 255, 255, 0.4);
 			}
 
 			.wrapper.style1 header.major p {
-				color: #c8ece9;
+				color: #ffffff;
 			}
 
 			.wrapper.style1 label {
@@ -2889,7 +2886,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 .icon.major {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(255, 255, 255, 0.4);
 			}
 
 			.wrapper.style1 ul.alt li {
@@ -2958,8 +2955,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #505393;
-			color: #d3d4e4;
+			background-color: #4D9167;
+			color: #ffffff;
 		}
 
 			.wrapper.style3 strong, .wrapper.style3 b {
@@ -2968,6 +2965,7 @@ input, select, textarea {
 
 			.wrapper.style3 h2, .wrapper.style3 h3, .wrapper.style3 h4, .wrapper.style3 h5, .wrapper.style3 h6 {
 				color: #ffffff;
+				font-family: "Open Sans", Helvetica, Microsoft JhengHei;
 			}
 
 			.wrapper.style3 hr {
@@ -2991,7 +2989,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style3 header.major p {
-				color: #d3d4e4;
+				color: #ffffff;
 			}
 
 			.wrapper.style3 label {
@@ -3329,7 +3327,7 @@ input, select, textarea {
 		-ms-transition: -ms-transform 0.5s ease;
 		transition: transform 0.5s ease;
 		-webkit-overflow-scrolling: touch;
-		background: #21b2a6;
+		background: #F05E46;
 		color: #ffffff;
 		height: 100%;
 		max-width: 80%;
